# GoogleDawnBinaries

./: .gitignore  CMakeLists.txt  README.md  build.cmd  build.sh
demo/: Adapter.cpp  Adapter.h  BindGroup.cpp  BindGroup.h  BindGroupLayout.cpp  BindGroupLayout.h  Buffer.cpp  Buffer.h  CMakeLists.txt  CommandEncoder.cpp  CommandEncoder.h  Device.cpp  Device.h  Fps.h  Helpers.h  Instance.cpp  Instance.h  Namespace.h  RenderPass.cpp  RenderPass.h  RenderPipeline.cpp  RenderPipeline.h  ShaderModule.cpp  ShaderModule.h  Surface.cpp  Surface.h  main.cpp
resources/: shader.wgsl
